--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,18 @@ dependencies:
   permission_handler: ^11.3.1
   file_picker: ^8.1.2
   percent_indicator: ^4.2.3
+  video_trimmer: ^3.0.1
+  video_editor: ^3.0.0
+  get_it: ^7.7.0
+  injectable: ^2.4.4
  
 dev_dependencies:
   flutter_test:
     sdk: flutter
   
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.12
+  injectable_generator: ^2.6.2
 
 flutter:
   uses-material-design: true
