--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,13 +21,13 @@ dependencies:
   permission_handler: ^11.3.1
   file_picker: ^8.1.2
   percent_indicator: ^4.2.3
-  video_trimmer: ^3.0.1
   video_editor: ^3.0.0
   get_it: ^7.7.0
   injectable: ^2.4.4
-  image_picker: ^1.0.0
-  video_thumbnail: ^0.5.3
   device_info_plus: ^10.1.2
+  flutter_bloc: ^8.1.6
+  freezed_annotation: ^2.4.4
+  photo_manager: ^3.5.0
  
 dev_dependencies:
   flutter_test:
