--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   freezed_annotation: ^2.4.4
   photo_manager: ^3.5.0
+  flutter_svg: ^2.0.10+1
  
 dev_dependencies:
   flutter_test:
@@ -40,6 +41,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - assets/
     - assets/sample.mp4
     - assets/subtitles.srt
 
