--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   freezed_annotation: ^2.4.4
   photo_manager: ^3.5.0
   flutter_svg: ^2.0.10+1
+  freezed: ^2.5.7
  
 dev_dependencies:
   flutter_test:
