refactor and code optimization

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,6 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  ffmpeg_kit_flutter: ^6.0.3
   video_player: ^2.9.1
   path_provider: ^2.1.4
   permission_handler: ^11.3.1
@@ -30,6 +29,7 @@ dependencies:
   photo_manager: ^3.5.0
   flutter_svg: ^2.0.10+1
   freezed: ^2.5.7
+  ffmpeg_kit_flutter_min_gpl: ^6.0.3
  
 dev_dependencies:
   flutter_test:
