--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,10 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/images/
     - assets/sample.mp4
     - assets/subtitles.srt
+
   fonts:
     - family: Roboto-Regular
       fonts:
