--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,44 +1,42 @@
 name: ffmpeg_video_editor
 description: "A new Flutter project."
 
-
-publish_to: 'none' 
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
   sdk: ^3.5.0
 
-
 dependencies:
   flutter:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  video_player: ^2.9.1
-  path_provider: ^2.1.4
-  permission_handler: ^11.3.1
-  file_picker: ^8.1.2
+  video_player: ^2.10.0
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.1
+  file_picker: ^10.3.2
   percent_indicator: ^4.2.3
   video_editor: ^3.0.0
-  get_it: ^7.7.0
+  get_it: ^8.2.0
   injectable: ^2.4.4
-  device_info_plus: ^10.1.2
-  flutter_bloc: ^8.1.6
-  freezed_annotation: ^2.4.4
-  photo_manager: ^3.5.0
-  flutter_svg: ^2.0.10+1
-  freezed: ^2.5.7
-  ffmpeg_kit_flutter_full_gpl: ^6.0.3
-  video_thumbnail: ^0.5.3
- 
+  device_info_plus: ^11.5.0
+  flutter_bloc: ^9.1.1
+  freezed_annotation: ^3.1.0
+  photo_manager: ^3.7.1
+  flutter_svg: ^2.2.0
+  freezed: ^3.2.0
+  video_thumbnail: ^0.5.6
+  ffmpeg_kit_flutter_new: ^3.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
-  flutter_lints: ^4.0.0
-  build_runner: ^2.4.12
-  injectable_generator: ^2.6.2
+
+  flutter_lints: ^6.0.0
+  build_runner: ^2.7.0
+  injectable_generator: ^2.8.1
 
 flutter:
   uses-material-design: true
@@ -51,32 +49,4 @@ flutter:
   fonts:
     - family: Roboto-Regular
       fonts:
-        - asset: assets/fonts/Roboto-Regular.ttf  
-
-
-
-  
-  
-
-  
-  
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+        - asset: assets/fonts/Roboto-Regular.ttf
